tests/reference/asr-kind_float_of_int-4b9cf53.stderr
semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
 --> tests/errors/kind_float_of_int.f90:3:13
  |
3 |     integer(4.2) :: x
  |             ^^^ 
